--- a/lacy-matt/styles/layout.css
+++ b/lacy-matt/styles/layout.css
@@ -10,6 +10,7 @@ body header section h1 {
 
 body header section h2 {
     margin-bottom: 0;
+    line-height: 30px;
 }
 
 body header nav ul {
@@ -27,6 +28,7 @@ body header nav ul {
     margin-top: 0px;
     background-color: #FFE9AD;
     padding-bottom: 5px;
+    display: none;
 }
 
 nav ul {
@@ -39,7 +41,9 @@ header li {
 }
 
 header ul li {
+    font-size: 24px;
     border-bottom: 1px solid gray;
+    padding: 20px 0px;
 }
 
 ul a {
@@ -53,6 +57,10 @@ ul a {
     float: right;
     zoom: 3;
 }
+
+/* .icon-menu:hover {
+  display: block;
+} */
 
 main {
     padding-left: 10px;
@@ -70,4 +78,12 @@ main {
     text-decoration-line: none;
     color: gray;
     font-weight: bold;
+}
+
+.article-body {
+  line-height: 20px;
+}
+
+@media (min-width: 640px) {
+
 }
