--- a/lacy-matt/styles/layout.css
+++ b/lacy-matt/styles/layout.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     font-family: Arial, Helvetica, sans-serif;
     margin: 0;
-}
+} */
 
-body header section {
+/* body header section {
   padding: 15px 0 10px 0;
   background-color: #FFE9AD;
 }
@@ -40,14 +40,14 @@ body header nav ul {
 
 nav ul {
     padding-left: 0;
-}
+} */
 
 /* header li {
     list-style-type: none;
     padding: 5px 0;
 } */
 
-header ul li {
+/* header ul li {
     font-size: 24px;
     border-bottom: 1px solid gray;
     padding: 20px 0px;
@@ -89,20 +89,52 @@ main {
 
 .article-body {
   line-height: 20px;
-}
+} */
 
-@media (min-width: 640px) {
-  .icon-menu {
-    display: none;
+.pull-left {
+    float: left;
+  }
+  
+  .pull-right {
+    float: right;
+  }
+  
+  .clearfix::after {
+    content: "";
+    display: table;
+    clear: both;
+  }
+  
+  .heading-group-h1 {
+    max-width: 80%;
+  }
+  
+  #filters select {
+    width: 90%;
+    margin: .2em 5%;
   }
 
-  .main-nav ul {
-    display: block;
-  }
+@media only screen and (min-width: 640px) {
+    .heading-group-h1 {
+      padding: .1em .1em .1em 2em;
+      float: none;
+    }
+  
+    #filters select {
+      width: 15em;
+      margin: .2em .2em;
+    }
+  
+    #filters li {
+      width: 20em;
+      display: inline;
+    }
+  }  
 
-  header ul li {
+/* @media (min-width: 640px) { */
+  /* header ul li {
       border-bottom: none;
       display: inline;
       padding-left: 15px;
   }
-}
+} */
